Register page created + Layout problem solved

--- a/source/webapp-stufv/webapp-stufv/Content/Global.css
+++ b/source/webapp-stufv/webapp-stufv/Content/Global.css
@@ -11,17 +11,21 @@
 }
 
 .footer {
-  height: 5%;
   background-color: #f5f5f5;
   position: fixed;
   bottom: 0;
-  width: 100%;
+  left: 0;
+  right: 0;
+  text-align: right;
 }
 
-.right {
-    float: right;
-    margin-right: 10%;
+.footer p {
+    display: inline-block;
+    margin-right: 5px;
+    padding-bottom: 0;
+    margin-bottom: 0;
 }
+
 .eventshort {
     border: 2px groove lightgray; 
     margin-bottom: 5px;
