--- a/source/webapp-stufv/webapp-stufv/Content/LoginIndex.css
+++ b/source/webapp-stufv/webapp-stufv/Content/LoginIndex.css
@@ -21,7 +21,8 @@
         position: relative;
     }
 
-    #login-modal .loginmodal-container input[type=text], input[type=password] {
+    #login-modal .loginmodal-container input[type=text],
+    #login-modal .loginmodal-container input[type=password] {
         height: 44px;
         font-size: 16px;
         width: 100%;
@@ -36,7 +37,8 @@
         -moz-box-sizing: border-box;
     }
 
-        #login-modal .loginmodal-container input[type=text]:hover, input[type=password]:hover {
+        #login-modal .loginmodal-container input[type=text]:hover,
+        #login-modal .loginmodal-container input[type=password]:hover {
             border: 1px solid #b9b9b9;
             border-top: 1px solid #a0a0a0;
             -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
@@ -106,4 +108,20 @@
         left: 55%;
         transform: translate(-50%,-50%);
     }
+}
+/** Register.cshtml **/
+
+input[type="text"],
+input[type="password"],
+input[type="email"] {
+    width: 100%;
+}
+
+
+.text-center {
+    margin-top: 15px;
+}
+
+label {
+    margin-top: 15px;
 }
