--- a/source/webapp-stufv/webapp-stufv/Content/simple-sidebar.css
+++ b/source/webapp-stufv/webapp-stufv/Content/simple-sidebar.css
@@ -39,7 +39,7 @@
 #page-content-wrapper {
     width: 100%;
     position: absolute;
-    padding: 15px;
+    padding: 20px;
 }
 
 #wrapper.toggled #page-content-wrapper {
@@ -147,6 +147,7 @@
     #page-content-wrapper {
         padding: 20px;
         position: relative;
+        bottom: 20px;
     }
 
     #wrapper.toggled #page-content-wrapper {
